--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tanstack/react-router": "^1.24.0",
     "@tanstack/router-devtools": "^1.24.0",
+    "ky": "^1.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-toggle-dark-mode": "^1.1.1",
     "usehooks-ts": "^3.0.2"
   },
