--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tanstack/react-router": "^1.24.0",
     "@tanstack/router-devtools": "^1.24.0",
+    "highcharts": "^11.4.0",
+    "highcharts-react-official": "^3.2.1",
     "ky": "^1.2.3",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "^18.2.0",
